Fix where background does not have theme color during scroll on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,7 @@
 .pseudoBody {
   margin: 0 auto;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -76,9 +76,6 @@ ul {
 }
 
 @media only screen and (min-width: 400px) {
-  .pseudoBody {
-    height: 100%;
-  }
 
   .borderTop {
     border-top: 0;
