--- a/src/index.css
+++ b/src/index.css
@@ -42,5 +42,5 @@
 }
 
 html, body, #root {
-  height: 100%;
+  min-height: 100vh;
 }
